--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,9 @@
 # Frontend Environment Variables
 
-# API Base URL
-VITE_API_URL=http://localhost:8080/v1
+# API Base URL (backend API endpoint)
+# For local development: http://localhost:8080/v1
+# For production: https://your-backend-url.com/v1
+VITE_API_BASE_URL=http://localhost:8080/v1
 
 # Application Name
 VITE_APP_NAME=uduXPass
