--- a/uduxpass-scanner-app/client/public/manifest.json
+++ b/uduxpass-scanner-app/client/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Professional ticket scanning app for uduXPass events - Validate tickets offline with QR code scanning",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#1E40AF",
+  "background_color": "#0f1729",
+  "theme_color": "#F59E0B",
   "orientation": "portrait",
   "scope": "/",
   "icons": [
